--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -47,7 +47,9 @@
 			</div>
 		</div>
 		<div class="form">
-			name
+			<div class="title">
+				Give us your info!
+			</div>
 		</div>
 	</div>
 </div>
