--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -1,55 +1,89 @@
 <div class="landing-page">
-	<div class="header">Turn Earnings into Same-Day Cash with</div>
-	<div class="info">
-		<div class="display">
-			<div class="logo">
-					<img src="assets/logo.png">
-			</div>
+	<div class="usable-space">
+		<div class="logo">
+			<img src="assets/logo.png">
+		</div>
+		<div class="intro">
+			<div class="header">Turn Earnings into Same-Day Cash with iJustGotMoney.com</div>
 			<div class="summary">Stop waiting weeks for your cash. Get cash on your earnings within 24-hours by getting an advance with iJGM.
 				Waiting 7, 14 and sometimes 30-days for payments can put a great deal of stress on your cash flow. By working with iJGM, you can build up more cash flow to pay bills, meet emergency demands and grow your lifestyle.
 			</div>
-			<div class="highlights">
-				<div class="title">Highlights of Our Services</div>
-				<div class="sub-title">
-					By focusing on our clients and their personal needs, we have created a better cash advance experience. Here is what you can expect when you get a cash advance with iJGM:
+			<button (click)="showInputModal()">
+				Contact us to start factoring
+			</button>
+		</div>
+		<div class="info">
+			<div class="display">
+				<div class="highlights">
+					<div class="title">Highlights of Our Services</div>
+					<div class="underline"></div>
+					<div class="sub-title">
+						By focusing on our clients and their personal needs, we have created a better cash advance experience. Here is what you can expect when you get a cash advance with iJGM:
+					</div>
+					<ul>
+						<li>
+							Same-day funding
+						</li>
+						<li>
+							Years of cash advance experience
+						</li>
+						<li>
+							Highest cash advance rate in the industry
+						</li>
+						<li>
+							Your first cash advance if FREE with approval
+						</li>
+						<li>
+							Online account access and easy uploading of documents
+						</li>
+						<li>
+							Scalable funding that grows with your lifestyle/earnings
+						</li>
+					</ul>
 				</div>
-				<ul>
-					<li>
-						Same-day funding
-					</li>
-					<li>
-						Years of cash advance experience
-					</li>
-					<li>
-						Highest cash advance rate in the industry
-					</li>
-					<li>
-						Your first cash advance if FREE with approval
-					</li>
-					<li>
-						Online account access and easy uploading of documents
-					</li>
-					<li>
-						Scalable funding that grows with your lifestyle/ earnings
-					</li>
-				</ul>
-			</div>
-			<div class="contact">
-				<div class="title">
-					Contact Us Today
-				</div>
-				<div class="phone">
-					<span class="color">Phone:</span> 972-293-4400
-				</div>
-				<div class="email">
-					<span class="color">Email:</span> info@ijustgotmoney.com
+				<div class="contact">
+					<div class="wrapper">
+							<img src="assets/logo.png">
+							<span class="info">
+								<div class="title">
+									Contact Us Today
+								</div>
+								<div class="phone">
+									<span class="color">Phone:</span> 972-293-4400
+								</div>
+								<div class="email">
+									<span class="color">Email:</span> info@ijustgotmoney.com
+								</div>
+							</span>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="form">
-			<div class="title">
-				Give us your info!
-			</div>
+	</div>
+	<div class="form" *ngIf="showInfoInputModal">
+		<div class="title">
+			Give us your info!
 		</div>
+		<div class="inputs">
+			<div class="field-name">
+				First Name:
+			</div>
+			<input type="text" name="fname">
+			<div class="field-name">
+				Last Name:
+			</div>
+			<input type="text" name="lname">
+			<div class="field-name">
+				Phone Number:
+			</div>
+			<input type="text" name="phone">
+			<div class="field-name">
+				Email Address:
+			</div>
+			<input type="text" name="email">
+		</div>
+		<button (click)="closeInputModal()">
+			Submit
+		</button>
 	</div>
 </div>
