--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -1,47 +1,42 @@
 <div class="landing-page">
-	<div class="usable-space">
+	<div class="logo-wrapper">
 		<div class="logo">
 			<img src="assets/logo.png">
 		</div>
-		<div class="intro">
+	</div>
+	<div id="info" class="page">
+		<div class="top">
 			<div class="header">Turn Earnings into Same-Day Cash with iJustGotMoney.com</div>
-			<div class="summary">Stop waiting weeks for your cash. Get cash on your earnings within 24-hours by getting an advance with iJGM.
-				Waiting 7, 14 and sometimes 30-days for payments can put a great deal of stress on your cash flow. By working with iJGM, you can build up more cash flow to pay bills, meet emergency demands and grow your lifestyle.
-			</div>
-			<button (click)="showInputModal()">
-				Contact us to start factoring
-			</button>
+			<div class="summary">Stop waiting weeks for your cash. Get cash on your earnings within 24-hours by getting an advance with iJGM.</div>
 		</div>
 		<div class="info">
 			<div class="display">
 				<div class="highlights">
+					<div class="pre-highlight">Waiting 7, 14 and sometimes 30-days for payments can put a great deal of stress on your cash flow. By working with iJGM, you can build up more cash flow to pay bills, meet emergency demands and grow your lifestyle.</div>
 					<div class="title">Highlights of Our Services</div>
-					<div class="underline"></div>
 					<div class="sub-title">
 						By focusing on our clients and their personal needs, we have created a better cash advance experience. Here is what you can expect when you get a cash advance with iJGM:
 					</div>
-					<ul>
-						<li>
-							Same-day funding
-						</li>
-						<li>
-							Years of cash advance experience
-						</li>
-						<li>
-							Highest cash advance rate in the industry
-						</li>
-						<li>
-							Your first cash advance if FREE with approval
-						</li>
-						<li>
-							Online account access and easy uploading of documents
-						</li>
-						<li>
-							Scalable funding that grows with your lifestyle/earnings
-						</li>
-					</ul>
+					<li>
+						Same-day funding
+					</li>
+					<li>
+						Years of cash advance experience
+					</li>
+					<li>
+						Highest cash advance rate in the industry
+					</li>
+					<li>
+						Your first cash advance if FREE with approval
+					</li>
+					<li>
+						Online account access and easy uploading of documents
+					</li>
+					<li>
+						Scalable funding that grows with your lifestyle/earnings
+					</li>
 				</div>
-				<div class="contact">
+				<!-- <div class="contact">
 					<div class="wrapper">
 							<img src="assets/logo.png">
 							<span class="info">
@@ -56,15 +51,25 @@
 								</div>
 							</span>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
-	<div class="form" *ngIf="showInfoInputModal">
+	<div id="form" class="form">
 		<div class="title">
-			Give us your info!
+			Contact Us Today
+			<div class="display-phone">972-293-4400</div>
+			<div class="display-email">info@ijustgotmoney.com</div>
 		</div>
 		<div class="inputs">
+			<div class="title">
+				<div class="header">
+					Free Quote
+				</div>
+				<div class="sub-title">
+					Complete this form and we'll contact you.
+				</div>
+			</div>
 			<div class="field-name">
 				First Name:
 			</div>
@@ -81,9 +86,9 @@
 				Email Address:
 			</div>
 			<input type="text" name="email">
+			<button (click)="closeInputModal()">
+				Submit
+			</button>
 		</div>
-		<button (click)="closeInputModal()">
-			Submit
-		</button>
 	</div>
 </div>
