--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -1,78 +1,68 @@
 .landing-page {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: lightgrey;
-	height: 100%;
+	position: relative;
+    background-color: white;
 	width: 100%;
-	.usable-space {
-		height: 100%;
-		background-color: white;
-		margin-right: 50px;
-		margin-left: 50px;
-		text-align: center;
+	.logo-wrapper {
+		height: 110px;
 		.logo {
+			margin-left: 40px;
 			text-align: left;
 			img {
-				max-height: 65px;
+				max-height: 80px;
 			}
 		}
-		.intro {
-			overflow: auto;
-			background-color: #DBEBF7;
-			min-height: 400px;
-			text-align: left;
-			color: white;
+	}
+	.page {
+		color: #6d6d6d;
+		float: left;
+		margin: auto;
+		width: calc(100% - 400px);
+		padding-left: 50px;
+		overflow: auto;
+		min-height: 400px;
+		text-align: left;
+		.top {
 			.header {
-				background-color: black;
-				margin-left: 50px;
-				margin-top: 50px;
+				color: black;
 				font-size: 50px;
-				max-width: 490px;
-				padding: 10px;
+				max-width: 800px;
 			}
 			.summary {
-				background-color: black;
-				margin-left: 50px;
 				margin-top: 20px;
 				margin-right: 100px;
-				font-size: 17px;
-				padding: 10px;
+				font-size: 25px;
+				margin-bottom: 25px;
 			}
-			button {
-				margin-top: 40px;
-				margin-left: 50px;
-				background-color: #5BB5E2;
-				color: white;
-				border-color: black;
-				height: 40px;
-				width: 220px;
-				margin-bottom: 30px;
-				font-size: 14px;
-			}
+			border-bottom: 1px solid #dddcdc;
+			margin-right: 50px;
 		}
 		.info {
+			margin-right: 50px;
+			color: #6d6d6d;
 			text-align: left;
 			display: inline-block;
 			.display {
 				.highlights {
-					.title {
-						font-size: 35px;
-						margin-top:	40px;
-						margin-left: 40px;
+					.pre-highlight {
+						margin-top: 20px;
+						font-size: 17px;
+						margin-bottom: 25px;
 					}
-					.underline {
-						background-color: #5BB5E2;
-						height: 2px;
-						width: 153px;
-						margin-left: 40px;
-						margin-top: 5px;
-						margin-bottom: 10px;
+					.title {
+						color: black;
+						font-size: 28px;
+						margin-top:	20px;
 					}
 					.sub-title {
 						font-size: 17px;
-						margin: 10px 40px 15px 40px;
+						margin-top: 20px;
+						margin-bottom: 20px;
 					}
-					ul {
-						list-style-position: inside;
+					li {
+						margin-top: 20px;
+						margin-bottom: 20px;
+						color: black;
 						font-size: 20px;
 					}
 				}
@@ -104,38 +94,75 @@
 		}
 	}
 	.form {
-		text-align: center;
-		position: absolute;
-		width: 350px;
+		float: left;
+		width: 345px;
+		text-align: left;
 		min-height: 300px;
-		background-color: lightgray;
 		top: 20%;
 		left: 34%;
 		.title {
-			margin:	15px;
+			border: 1px solid #696969;
+			margin-bottom: 15px;
+			padding-top: 20px;
+			background-color: #f3f3f3;
+			font-size: 25px;
+			padding-left: 15px;
+			.display-phone {
+				margin-top: 10px;
+				color: rgb(7, 128, 250);
+			}
+			.display-email {
+				margin-top: 10px;
+				color: rgb(7, 128, 250);
+				padding-bottom: 20px;
+			}
 		}
 		.inputs {
+			border: 1px solid #696969;
+			background-color: #f3f3f3;
 			text-align: left;
+			.title {
+				color: white;
+				background-color: rgb(18, 134, 192);
+				.header {
+					font-size: 25px;
+				}
+				.sub-title {
+					margin-top: 10px;
+					margin-bottom: 10px;
+					font-size: 17px;
+				}
+			}
 			.field-name {
 				margin-left: 10px;
 				margin-bottom: 5px;
 			}
 			input {
-				margin-left: 20px;
+				margin-left: 10px;
 				margin-bottom:10px;
 				width: 300px;
+			background-color: #f3f3f3;
+				border-top: none;
+				border-left: none;
+				border-right: none;
+				border-radius: 5px;
+				border-bottom: 1px solid #8f8e8e;
+			}
+			button {
+				margin-left: 10px;
+				margin-top: 25px;
+				background-color: #f3f3f3;
+				color: rgb(18, 134, 192);
+				border-color: rgb(18, 134, 192);
+				height: 40px;
+				width: 200px;
+				margin-bottom: 30px;
+				font-size: 14px;
 			}
 		}
-		button {
-			margin-top: 40px;
-			margin-left: -7px;
-			background-color: #5BB5E2;
-			color: white;
-			border-color: black;
-			height: 40px;
-			width: 200px;
-			margin-bottom: 30px;
-			font-size: 14px;
-		}
 	}
+}
+@media (max-width: 900px){
+    #form {width: 100%; text-align: center;}
+    #info {width: 100%;}
 }
