--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -33,6 +33,8 @@
 				margin-right: 100px;
 				font-size: 25px;
 				margin-bottom: 25px;
+				font-family: sans-serif;
+				font-weight: 100;
 			}
 			border-bottom: 1px solid #dddcdc;
 			margin-right: 50px;
@@ -46,8 +48,10 @@
 				.highlights {
 					.pre-highlight {
 						margin-top: 20px;
-						font-size: 17px;
+						font-size: 20px;
 						margin-bottom: 25px;
+						font-family: sans-serif;
+						font-weight: 100;
 					}
 					.title {
 						color: black;
@@ -55,15 +59,17 @@
 						margin-top:	20px;
 					}
 					.sub-title {
-						font-size: 17px;
+						font-size: 20px;
 						margin-top: 20px;
 						margin-bottom: 20px;
+						font-family: sans-serif;
+						font-weight: 100;
 					}
 					li {
 						margin-top: 20px;
 						margin-bottom: 20px;
 						color: black;
-						font-size: 20px;
+						font-size: 24px;
 					}
 				}
 				.contact {
@@ -101,7 +107,7 @@
 		top: 20%;
 		left: 34%;
 		.title {
-			border: 1px solid #696969;
+			border: .5px solid #bbbbbb;
 			margin-bottom: 15px;
 			padding-top: 20px;
 			background-color: #f3f3f3;
@@ -110,15 +116,17 @@
 			.display-phone {
 				margin-top: 10px;
 				color: rgb(7, 128, 250);
+				font-size: 20px
 			}
 			.display-email {
 				margin-top: 10px;
 				color: rgb(7, 128, 250);
 				padding-bottom: 20px;
+				font-size: 20px
 			}
 		}
 		.inputs {
-			border: 1px solid #696969;
+			border: .5px solid #bbbbbb;
 			background-color: #f3f3f3;
 			text-align: left;
 			.title {
@@ -131,17 +139,20 @@
 					margin-top: 10px;
 					margin-bottom: 10px;
 					font-size: 17px;
+					font-family: sans-serif;
+					font-weight: 100;
 				}
 			}
 			.field-name {
-				margin-left: 10px;
+				margin-left: 20px;
 				margin-bottom: 5px;
 			}
 			input {
-				margin-left: 10px;
+				margin-left: 20px;
 				margin-bottom:10px;
 				width: 300px;
-			background-color: #f3f3f3;
+				hight: 20px;
+				background-color: #f3f3f3;
 				border-top: none;
 				border-left: none;
 				border-right: none;
@@ -149,7 +160,7 @@
 				border-bottom: 1px solid #8f8e8e;
 			}
 			button {
-				margin-left: 10px;
+				margin-left: 20px;
 				margin-top: 25px;
 				background-color: #f3f3f3;
 				color: rgb(18, 134, 192);
