--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -6,13 +6,13 @@
 	</div>
 	<div id="info" class="page">
 		<div class="top">
-			<div class="header">Turn Earnings into Same-Day Cash with iJustGotMoney.com</div>
-			<div class="summary">Stop waiting weeks for your cash. Get cash on your earnings within 24-hours by getting an advance with iJGM.</div>
+			<div class="header">Turn Income into Same-Day Cash with iJustGotMoney.com</div>
+			<div class="summary">Stop waiting weeks for your cash. Get cash on your income within 24-hours by getting an advance with iJGM.</div>
 		</div>
 		<div class="info">
 			<div class="display">
 				<div class="highlights">
-					<div class="pre-highlight">Waiting 7, 14 and sometimes 30-days for payments can put a great deal of stress on your cash flow. By working with iJGM, you can build up more cash flow to pay bills, meet emergency demands and grow your lifestyle.</div>
+					<div class="pre-highlight">Waiting 7, 14 and sometimes 30-days for your paycheck can can put a great deal of stress on your cash flow. By working with iJGM, you can build up more cash flow to pay bills, meet emergency demands and provide for your family.</div>
 					<div class="title">Highlights of Our Services</div>
 					<div class="sub-title">
 						By focusing on our clients and their personal needs, we have created a better cash advance experience. Here is what you can expect when you get a cash advance with iJGM:
@@ -59,10 +59,16 @@
 	<form class="gform pure-form pure-form-stacked" method="POST" data-email="info@ijustgotmoney.com"
 	action="https://script.google.com/macros/s/AKfycbyiVjVcy7OVR27xI9kKo1vQ4F56dtTe0q1IKiCmI7L3-CwbRAuI/exec">
 		<div id="form" class="form">
-			<div class="title">
-				Contact Us Today
-				<div class="display-phone">972-293-4400</div>
-				<div class="display-email">info@ijustgotmoney.com</div>
+			<div class="form-top">
+				<div class="title">
+					<div class="header">
+						Contact Us Today
+					</div>
+				</div>
+				<div class="info">
+					<div class="display-phone">972-293-4400</div>
+					<a href="mailto:info@ijustgotmoney.com" class="display-email">info@ijustgotmoney.com</a>
+				</div>
 			</div>
 			<div class="inputs">
 				<div class="title">
