--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -4,12 +4,12 @@
     background-color: white;
 	width: 100%;
 	.logo-wrapper {
-		height: 110px;
+		height: 140px;
 		.logo {
 			margin-left: 40px;
 			text-align: left;
 			img {
-				max-height: 80px;
+				max-width: 328px;
 			}
 		}
 	}
@@ -106,23 +106,38 @@
 		min-height: 300px;
 		top: 20%;
 		left: 34%;
-		.title {
+		.form-top {
 			border: .5px solid #bbbbbb;
 			margin-bottom: 15px;
-			padding-top: 20px;
 			background-color: #f3f3f3;
 			font-size: 25px;
-			padding-left: 15px;
-			.display-phone {
-				margin-top: 10px;
-				color: #1F9DD8;
-				font-size: 20px
+			.title {
+				padding-left: 15px;
+				background-color: #1F9DD8;
+				padding-top: 20px;
+				padding-bottom: 15px;
+				margin-bottom: 15px;
+				.header {
+					color: white;
+				}
 			}
-			.display-email {
-				margin-top: 10px;
-				color: #1F9DD8;
-				padding-bottom: 20px;
-				font-size: 20px
+			.info {
+				padding-left: 15px;
+				margin-bottom: 15px;
+				.display-phone {
+					margin-top: 10px;
+					color: #1F9DD8;
+					font-size: 20px
+				}
+				a {
+					text-decoration: none;
+				}
+				.display-email {
+					margin-top: 10px;
+					color: #1F9DD8;
+					padding-bottom: 20px;
+					font-size: 20px;
+				}
 			}
 		}
 		.inputs {
@@ -133,7 +148,11 @@
 			background-color: #f3f3f3;
 			text-align: left;
 			.title {
+				padding-left: 15px;
+				padding-top: 20px;
+				padding-bottom: 10px;
 				color: white;
+				margin-bottom: 20px;
 				background-color: #1F9DD8;
 				.header {
 					font-size: 25px;
