--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -1,8 +1,13 @@
 .landing-page {
 	font-family: Arial, Helvetica, sans-serif;
-	position: relative;
-    background-color: white;
-	width: 100%;
+	position: absolute;
+	margin: 0px;
+	margin-left: 100px;
+	margin-right: 100px;
+	background-color: white;
+	border-left: 1px solid #dddcdc;
+	border-right: 1px solid #dddcdc;
+    height: 100%;
 	.logo-wrapper {
 		height: 140px;
 		.logo {
@@ -12,6 +17,11 @@
 				max-width: 328px;
 			}
 		}
+	}
+	.thank-you-message {
+		padding-left: 50px;
+		font-size: 50px;
+		margin-bottom: 20px;
 	}
 	.page {
 		color: #6d6d6d;
@@ -106,41 +116,6 @@
 		min-height: 300px;
 		top: 20%;
 		left: 34%;
-		.form-top {
-			border: .5px solid #bbbbbb;
-			margin-bottom: 15px;
-			background-color: #f3f3f3;
-			font-size: 25px;
-			.title {
-				padding-left: 15px;
-				background-color: #1F9DD8;
-				padding-top: 20px;
-				padding-bottom: 15px;
-				margin-bottom: 15px;
-				.header {
-					color: white;
-				}
-			}
-			.info {
-				text-align: left;
-				padding-left: 15px;
-				margin-bottom: 15px;
-				.display-phone {
-					margin-top: 10px;
-					color: #1F9DD8;
-					font-size: 20px
-				}
-				a {
-					text-decoration: none;
-				}
-				.display-email {
-					margin-top: 10px;
-					color: #1F9DD8;
-					padding-bottom: 20px;
-					font-size: 20px;
-				}
-			}
-		}
 		.inputs {
 			fieldset {
 				border: none;
@@ -197,7 +172,7 @@
 			}
 			.thank-you-message {
 				font-size: 23px;
-				margin-left: 10px;
+				margin-left: -17px;
 				margin-bottom: 20px;
 			}
 		}
