--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -109,71 +109,109 @@
 			}
 		}
 	}
-	.form {
-		float: left;
-		width: 345px;
-		text-align: left;
-		min-height: 300px;
-		top: 20%;
-		left: 34%;
-		.inputs {
-			fieldset {
-				border: none;
-			}
-			border: .5px solid #bbbbbb;
-			background-color: #f3f3f3;
+
+	form {
+		.form {
+			float: left;
+			width: 345px;
 			text-align: left;
-			.title {
-				padding-left: 15px;
-				padding-top: 20px;
-				padding-bottom: 10px;
-				color: white;
-				margin-bottom: 20px;
-				background-color: #1F9DD8;
-				.header {
-					font-size: 25px;
-				}
-				.sub-title {
-					margin-top: 10px;
-					margin-bottom: 10px;
-					font-size: 17px;
-					font-family: sans-serif;
-					font-weight: 100;
-				}
-			}
-			.field-name {
-				margin-left: 10px;
-				margin-bottom: 5px;
-			}
-			input {
-				margin-left: 10px;
-				margin-bottom:10px;
-				width: 300px;
-				height: 20px;
+			min-height: 300px;
+			top: 20%;
+			left: 34%;
+			.form-top {
+				border: .5px solid #bbbbbb;
+				margin-bottom: 15px;
 				background-color: #f3f3f3;
-				border-top: none;
-				border-left: none;
-				border-right: none;
-				border-radius: 5px;
-				border-bottom: 1px solid #8f8e8e;
+				font-size: 25px;
+				.title {
+					padding-left: 15px;
+					background-color: #1F9DD8;
+					padding-top: 20px;
+					padding-bottom: 15px;
+					margin-bottom: 15px;
+					.header {
+						color: white;
+					}
+				}
+				.info {
+					text-align: left;
+					padding-left: 15px;
+					margin-bottom: 15px;
+					.display-phone {
+						margin-top: 10px;
+						color: #1F9DD8;
+						font-size: 20px
+					}
+					a {
+						text-decoration: none;
+					}
+					.display-email {
+						margin-top: 10px;
+						color: #1F9DD8;
+						padding-bottom: 20px;
+						font-size: 20px;
+					}
+				}
 			}
-			button {
-				margin-left: 20px;
-				margin-top: 25px;
-				background-color: #1F9DD8;
-				color: white;
-				height: 40px;
-				width: 200px;
-				margin-bottom: 30px;
-				font-size: 14px;
+			.inputs {
 				&.submitted {
 					display: none;
 				}
-			}
-			.thank-you-message {
-				font-size: 23px;
-				margin-left: -17px;
-				margin-bottom: 20px;
+				fieldset {
+					border: none;
+				}
+				border: .5px solid #bbbbbb;
+				background-color: #f3f3f3;
+				text-align: left;
+				.title {
+					padding-left: 15px;
+					padding-top: 20px;
+					padding-bottom: 10px;
+					color: white;
+					margin-bottom: 20px;
+					background-color: #1F9DD8;
+					.header {
+						font-size: 25px;
+					}
+					.sub-title {
+						margin-top: 10px;
+						margin-bottom: 10px;
+						font-size: 17px;
+						font-family: sans-serif;
+						font-weight: 100;
+					}
+				}
+				.field-name {
+					margin-left: 10px;
+					margin-bottom: 5px;
+				}
+				input {
+					margin-left: 10px;
+					margin-bottom:10px;
+					width: 300px;
+					height: 20px;
+					background-color: #f3f3f3;
+					border-top: none;
+					border-left: none;
+					border-right: none;
+					border-radius: 5px;
+					border-bottom: 1px solid #8f8e8e;
+				}
+				button {
+					margin-left: 20px;
+					margin-top: 25px;
+					background-color: #1F9DD8;
+					color: white;
+					height: 40px;
+					width: 200px;
+					margin-bottom: 30px;
+					font-size: 14px;
+				}
+				.thank-you-message {
+					font-size: 23px;
+					margin-left: -17px;
+					margin-bottom: 20px;
+				}
 			}
 		}
 	}
