--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -68,8 +68,7 @@
 						</div>
 					</div>
 					<div class="info">
-						<div class="display-phone">972-293-4400</div>
-						<a href="mailto:info@ijustgotmoney.com" class="display-email">info@ijustgotmoney.com</a>
+						<div class="display-phone">(972) 293-4400</div>
 					</div>
 				</div>
 				<div class="inputs" [ngClass]="{ 'submitted': showThankYou, 'not-submitted': !showThankYou }">
