--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ app, #app {
 	right: 0;
 	bottom: 0;
 	overflow: hidden;
-	background-color: #d8dcdf;
+	background-color: #d6e2e5;
 
 	.app-content {
 		position: absolute;
