--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -7,7 +7,9 @@
 	background-color: white;
 	border-left: 1px solid #dddcdc;
 	border-right: 1px solid #dddcdc;
-    height: 100%;
+	height: 100%;
+	box-shadow: 0px 0px 3px;
+
 	.logo-wrapper {
 		height: 140px;
 		.logo {
@@ -139,7 +141,7 @@
 					margin-bottom: 15px;
 					.display-phone {
 						margin-top: 10px;
-						color: #1F9DD8;
+						color: black;
 						font-size: 20px
 					}
 					a {
