--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,31 +1,15 @@
 
 app, #app {
 
+}
+
+.large
+{
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	overflow: hidden;
+	overflow: auto;
 	background-color: #d6e2e5;
-
-	.app-content {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		overflow: auto;
-	}
-
-	&.showNav {
-		imging-nav {
-			display: flex;
-		}
-
-		.app-content {
-			top: 72px;
-		}
-	}
-
 }
