--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -2,13 +2,14 @@
 	font-family: Arial, Helvetica, sans-serif;
 	position: absolute;
 	margin: 0px;
-	margin-left: 100px;
-	margin-right: 100px;
 	background-color: white;
-	border-left: 1px solid #dddcdc;
-	border-right: 1px solid #dddcdc;
-	height: 100%;
-	box-shadow: 0px 0px 3px;
+	&.large {
+		border-left: 1px solid #dddcdc;
+		border-right: 1px solid #dddcdc;
+		margin-left: 100px;
+		margin-right: 100px;
+		box-shadow: 0px 0px 3px;
+	}
 	.logo-wrapper {
 		height: 140px;
 		.logo {
