--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -9,6 +9,7 @@
 		margin-left: 100px;
 		margin-right: 100px;
 		box-shadow: 0px 0px 3px;
+		min-height: 100%;
 	}
 	.logo-wrapper {
 		height: 140px;
