--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -90,7 +90,7 @@
 							<input id="last-name" name="last-name"/>
 						</fieldset>
 						<fieldset>
-							<label class="field-name" for="phone">Phone Number:</label>
+							<label class="field-name" for="phone">Mobile Phone:</label>
 							<input id="phone" name="phone"/>
 						</fieldset>
 						<fieldset>
