--- a/src/components/landing-page/landing-page.html
+++ b/src/components/landing-page/landing-page.html
@@ -11,6 +11,16 @@
 				<div *ngIf="!showThankYou" class="header">Turn Income into Same-Day Cash with iJustGotMoney.com</div>
 				<div class="summary">Stop waiting weeks for your cash. Get cash on your income within 24-hours by getting a cash advance with iJGM.</div>
 			</div>
+			<div *ngIf="isMobile" class="form-top">
+				<div class="title">
+					<div class="header">
+						Contact Us Today
+					</div>
+				</div>
+				<div class="info">
+					<div class="display-phone">(972) 293-4400</div>
+				</div>
+			</div>
 			<div class="info">
 				<div class="display">
 					<div class="highlights">
@@ -61,7 +71,7 @@
 		<form class="gform pure-form pure-form-stacked" method="POST" data-email="info@ijustgotmoney.com"
 		action="https://script.google.com/macros/s/AKfycbyiVjVcy7OVR27xI9kKo1vQ4F56dtTe0q1IKiCmI7L3-CwbRAuI/exec">
 			<div id="form" class="form">
-				<div class="form-top">
+				<div *ngIf="!isMobile" class="form-top">
 					<div class="title">
 						<div class="header">
 							Contact Us Today
