--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div id="app" [ngClass]="{ 'large': !isMobile }">
-	<landing-page [isMobile]="isMobile"></landing-page>
+<div id="app" [ngClass]="{ 'large': isLarge }">
+	<landing-page [isLarge]="isLarge" [isMedium]="isMedium" [isSmall]="isSmall"></landing-page>
 </div>
