don't zoom on input

--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -356,7 +356,7 @@
 			width: calc(100% - 30px);
 			text-align: center;
 			.form {
-				padding-bottom: 50px;
+				padding-bottom: 300px;
 				float: left;
 				min-height: 300px;
 				.inputs {
@@ -556,7 +556,7 @@
 			width: calc(100% - 30px);
 			text-align: center;
 			.form {
-				padding-bottom: 50px;
+				padding-bottom: 300px;
 				float: left;
 				min-height: 300px;
 				.inputs {
@@ -593,6 +593,7 @@
 						margin-bottom: 5px;
 					}
 					input {
+						font-size: 16px;
 						margin-left: 10px;
 						margin-bottom:10px;
 						width: calc(100% - 20px);
@@ -624,6 +625,7 @@
 		}
 	}
 }
+
 @media (max-width: 1100px){
     #form {width: 100%; text-align: center;}
     #info {width: 100%;}
